--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
           </p>
           <div class="main__boutiqueFigurines-boutonPanier">
             <p class="main__boutiqueFigurines-texteBoutonpanier">
-              Ajouter au panier<span class="main__boutiqueFigurines-tarif"
-                >74.90€</span
-              >
+              <span class="main__boutiqueFigurines-ajouter"
+                >Ajouter au panier</span
+              ><span class="main__boutiqueFigurines-tarif">74.90€</span>
             </p>
           </div>
         </article>
@@ -67,8 +67,10 @@
           </p>
           <div class="main__boutiqueFigurines-boutonPanier">
             <p class="main__boutiqueFigurines-texteBoutonpanier">
-              Ajouter au panier<span class="main__boutiqueFigurines-tarifBarré"
-                >74.90€</span
+              <span class="main__boutiqueFigurines-ajouter"
+                >Ajouter au panier</span
+              >
+              <span class="main__boutiqueFigurines-tarifBarré">74.90€</span
               ><span class="main__boutiqueFigurines-tarif">59€</span>
             </p>
           </div>
@@ -89,9 +91,9 @@
           </p>
           <div class="main__boutiqueFigurines-boutonPanier">
             <p class="main__boutiqueFigurines-texteBoutonpanier">
-              Ajouter au panier<span class="main__boutiqueFigurines-tarif"
-                >98.90€</span
-              >
+              <span class="main__boutiqueFigurines-ajouter"
+                >Ajouter au panier</span
+              ><span class="main__boutiqueFigurines-tarif">98.90€</span>
             </p>
           </div>
         </article>
@@ -109,9 +111,9 @@
           </p>
           <div class="main__boutiqueFigurines-boutonPanier">
             <p class="main__boutiqueFigurines-texteBoutonpanier">
-              Ajouter au panier><span class="main__boutiqueFigurines-tarif"
-                >113.90€</span
-              >
+              <span class="main__boutiqueFigurines-ajouter"
+                >Ajouter au panier</span
+              ><span class="main__boutiqueFigurines-tarif">113.90€</span>
             </p>
           </div>
         </article>
@@ -131,8 +133,9 @@
           </p>
           <div class="main__boutiqueFigurines-boutonPanier">
             <p class="main__boutiqueFigurines-texteBoutonpanier">
-              Ajouter au panier<span class="main__boutiqueFigurines-tarifBarré"
-                >98.90€</span
+              <span class="main__boutiqueFigurines-ajouter"
+                >Ajouter au panier</span
+              ><span class="main__boutiqueFigurines-tarifBarré">98.90€</span
               ><span class="main__boutiqueFigurines-tarif">69€</span>
             </p>
           </div>
@@ -151,9 +154,9 @@
           </p>
           <div class="main__boutiqueFigurines-boutonPanier">
             <p class="main__boutiqueFigurines-texteBoutonpanier">
-              Ajouter au panier<span class="main__boutiqueFigurines-tarif"
-                >74.90€</span
-              >
+              <span class="main__boutiqueFigurines-ajouter"
+                >Ajouter au panier</span
+              ><span class="main__boutiqueFigurines-tarif">74.90€</span>
             </p>
           </div>
         </article>
@@ -171,9 +174,9 @@
           </p>
           <div class="main__boutiqueFigurines-boutonPanier">
             <p class="main__boutiqueFigurines-texteBoutonpanier">
-              Ajouter au panier<span class="main__boutiqueFigurines-tarif"
-                >74.90€</span
-              >
+              <span class="main__boutiqueFigurines-ajouter"
+                >Ajouter au panier</span
+              ><span class="main__boutiqueFigurines-tarif">74.90€</span>
             </p>
           </div>
         </article>
@@ -191,9 +194,9 @@
           </p>
           <div class="main__boutiqueFigurines-boutonPanier">
             <p class="main__boutiqueFigurines-texteBoutonpanier">
-              Ajouter au panier<span class="main__boutiqueFigurines-tarif"
-                >113.90€</span
-              >
+              <span class="main__boutiqueFigurines-ajouter"
+                >Ajouter au panier</span
+              ><span class="main__boutiqueFigurines-tarif">113.90€</span>
             </p>
           </div>
         </article>
@@ -213,9 +216,9 @@
           </p>
           <div class="main__boutiqueFigurines-boutonPanier">
             <p class="main__boutiqueFigurines-texteBoutonpanier">
-              Ajouter au panier<span class="main__boutiqueFigurines-tarif"
-                >98.90€</span
-              >
+              <span class="main__boutiqueFigurines-ajouter"
+                >Ajouter au panier</span
+              ><span class="main__boutiqueFigurines-tarif">98.90€</span>
             </p>
           </div>
         </article>
