3eme commit ajout des bannières soldes

--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
       </header>
 
       <main class="main__boutiqueFigurines">
+        <div class="main__boutiqueFigurines-bannière1">
+          <p class="main__boutiqueFigurines-soldes">soldes</p>
+        </div>
+
+        <div class="main__boutiqueFigurines-bannière2">
+          <p class="main__boutiqueFigurines-soldes">soldes</p>
+        </div>
+
         <article class="main__boutiqueFigurines-encarts">
           <img
             class="main__boutiqueFigurinesPhotos"
